--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-server</artifactId>
+			<version>8.0.5</version>
+		</dependency>
 
 
 	</dependencies>
