--- a/testdb.properties
+++ b/testdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Mon Jul 06 13:43:39 SAMT 2020
+#Mon Jul 06 23:19:42 SAMT 2020
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
