--- a/testdb.properties
+++ b/testdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Jul 08 15:47:05 SAMT 2020
-version=2.4.1
-modified=yes
+#Thu Jul 09 12:20:05 SAMT 2020
 tx_timestamp=0
+modified=no
+version=2.4.1
